# simple-ir-system

./: .gitattributes  .gitignore  README.md  irs_config.json  main.py  pyproject.toml  run.sh  sh_config.conf
content/: bow_data.joblib  preprocessed_data.pkl
content/whoosh_index/: MAIN_q67ow5urx3bw4smh.seg  _MAIN_1.toc
datasets/: mojok.csv
